--- a/muzik.css
+++ b/muzik.css
@@ -1,1 +1,24 @@
+h1{
+
+    color:red;
+}
+
+h2{
+    color:blue;
+}
+
+h3{
+
+    color:coral;
+}
+
+body{
+
+    text-align: center;
+    text-indent: 10px;
+    
+    
+}
+
+
 
